changed contrast issue

--- a/src/components/TechSkillsComponent/skills.css
+++ b/src/components/TechSkillsComponent/skills.css
@@ -38,24 +38,24 @@ ul {
 
 .code h2 {
     color: rgb(184, 35, 35);
-    background-color: rgb(255, 198, 247);
+    background-color: rgba(255, 222, 48, 1);
     width: 90px;
 }
 
 .toolbox h2 {
     color: rgb(184, 35, 35);
-    background-color: rgb(189, 222, 255);
+    background-color: rgba(255, 222, 48, 1);
     width: 140px;
 }
 
 .upcoming h2 {
     color: rgb(184, 35, 35);
-    background-color: rgb(191, 255, 213);
+    background-color: rgba(255, 222, 48, 1);
     width: 180px;
 }
 
 .more h2 {
-    background-color: rgba(255, 222, 48, 1);
+    background-color: rgb(255, 198, 247);
     color: blue;
     width: 90px;
 }
